[package]
name = "glove"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
actix-web = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
arc-swap = "1"
