[package]
name = "glove"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1"
sha2 = "0.10"
actix-web = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
arc-swap = "1"
utoipa = { version = "5", features = ["actix_extras"] }
reqwest = { version = "0.12", features = ["json"] }
rustc-hash = "2"
actix-cors = "0.7"
actix-governor = "0.7"
governor = "0.8"

[dev-dependencies]
tempfile = "3"
